--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -14,7 +14,7 @@ h2{
     padding-left: 20px;
 }
 h3{
-    width: 700px;
+    max-width: 700px;
     font-weight: 400;
     line-height: 30px;
     font-size: 30px;
@@ -23,7 +23,7 @@ h3{
     padding-left: 20px;
 }
 p{
-    width: 650px;
+    max-width: 650px;
     padding-top: 20px;
     font-size: 16px;
     color: #000000b0;
@@ -35,4 +35,30 @@ p{
 .about-img{
     border-radius: 40px;
     padding-left: 20px;
+}
+@media (max-width: 1300px) and (min-width: 330px) {
+    .nav-link-about{
+        flex-wrap: wrap;
+    }
+}
+@media (max-width: 685px) and (min-width: 330px) {
+    .about-img{
+        width: 500px;
+    }
+}
+@media (max-width: 440px) and (min-width: 330px) {
+    .about-img{
+        display: none;
+    }
+}
+@media (max-width: 540px) and (min-width: 330px) {
+    h2{
+        padding-top: 0px;
+    }
+    .about-img{
+        width: 400px;
+    }
+    .about{
+        padding-top: 20px;
+    }
 }
