--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -28,3 +28,8 @@ h5{
     padding-left: 20px;
     padding-right: 20px;
 }
+@media (max-width: 555px) and (min-width: 330px) {
+    .icons{
+        padding-left: 10px;
+    }
+}
